[package]
name = "atomic-clock"
version = "0.1.0"
edition = "2021"
description = "⚛️ Better, Faster dates & times for Python"

[lib]
name = "_atomic_clock"
crate-type = ["rlib", "cdylib"]

[dependencies]
pyo3 = { version = "0.16.2", features = ["multiple-pymethods"] }
chrono = "0.4"
chrono-tz = { path = "vendor/chrono-tz", version = "0.6.1" }
lazy_static = "1"
rust_decimal = "1.22"
relativedelta = "0.2.2"

[features]
default = ["pyo3/extension-module"]
