[package]
name = "atomic-clock"
version = "0.1.0"
edition = "2021"
description = "⚛️ Better, Faster dates & times for Python"
readme = "README.md"

[package.metadata.maturin]
python-source = "python"
requires-python = ">=3.7"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[lib]
name = "atomic_clock"
crate-type = ["rlib", "cdylib"]

[dependencies]
pyo3 = { version = "0.16.2", features = ["multiple-pymethods"] }
chrono = "0.4"
chrono-tz = { path = "vendor/chrono-tz", version = "0.6.1" }
lazy_static = "1"
rust_decimal = "1.22"
relativedelta = "0.2.2"

[features]
default = ["pyo3/extension-module"]
