[project]
name = "py-spear"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 1 - Planning",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Rust",
]

[tool.poetry]
name = "py-spear"
version = "0.1.0"
description = "🔱 Better, Faster dates & times for Python"
authors = ["ZhengYu, Xu <zen-xu@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"
